Fixed few issues on mobile.

--- a/css/colimit.css
+++ b/css/colimit.css
@@ -3,22 +3,15 @@
   font-weight: 200;
   font-size: 16px;
 }
-.logo {
-  display: block;
-  max-width: 70%;
-  margin-left: -5%;
-  /*margin: 0 auto;*/
-}
 .row-full-height {
   height: 100%;
 }
 h1 {
-  /* font-family: 'Bebas Neue', 'Jost', 'Helvetica Neue', sans-serif; */
   font-weight: 500;
   color: #000000;
-  margin: -8rem 0 2rem 0;
   font-size: 8rem;
   text-align: center;
+  padding-bottom: 1rem;
 }
 h2 {
   color: #000000;
@@ -28,23 +21,27 @@ h2 {
   text-align: center;
 }
 h3 {
-    text-align: center;
-}
-h3, h4 {
+  text-align: center;
   font-size: 1.8rem;
   color: #555760;
   font-weight: 400;
+  line-height: 2.5rem;
 }
 .hero {
   background-color: #D4D3DE;
   position: relative;
 }
-
 .hero .trick {
+  width: 800px;
   position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+}
+.logo {
+  display: block;
+  width: 31rem;
+  margin-left: 40px;
 }
 .light-leak-up, .light-leak-down {
   position: absolute;
@@ -111,17 +108,21 @@ bold {
     display: none;
   }
 
+  .hero .trick {
+    width: 300px;
+  }
+
   .logo {
-    max-width: 100%;
-    margin-left: 0;
+    /* max-width: 500px; */
+    margin-left: -100px;
   }
 
   h1 {
-    font-size: 1.8rem;
+    font-size: 5rem;
   }
 
-  h2 {
-    font-size: 2.6rem;
+  h3 {
+    font-size: 1.4rem;
     text-align: left;
   }
 
